@@ -6,6 +6,7 @@ ChangeLog
 2009-01-06
 	- Added new logo.
 	- Using SuggestBox to select a vocabulary into the working list.
+	- Improved dialog dispatch for selecting and loading a vocabulary into the working list.
 	
 2008-12-31
 	- Various additions
